replace css with min version

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>How much does it cost?</title>
-  <link rel="stylesheet" type="text/css" href="semantic.css">
+  <link rel="stylesheet" type="text/css" href="semantic.min.css">
 </head>
 
 <body>
